test-cases/negative/test_061_undefined_variable_in_expression.lay
# negative test: using undefined variable in expression
# expected: type checker should catch this

the variable result of type Number is undefined_var plus 5


